dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  ## Unblur this section if you choose to configure tls for https. It is easy.
  # tls:
  # - hosts:
  #   - dashboard.com
  #   secretName: myapp-secret-tls
  rules:
  - host: dashboard.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
---
### The secret file being ref. on line 11 is this:
# apiVersion: v1
# kind: Secret
# metadata:
#   name: myapp-secret-tls
#   namespace: default
# data:
#   tls.crt: base64 encoded cert
#   tls.key: base64 encoded key
# type: kubernetes.io/tls
