multiple-paths-same-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myapp.com
    http:
      paths:
      - path: /analytics
        backend:
          service:
            name: analytics-service
            port:
              number: 3000
      - path: /shopping
        backend:
          service:
            name: shopping-service
            port:
              number: 8080
